--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -122,7 +122,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Search By Product Name</mat-label>
                         <input matInput name="searchString" [(ngModel)]="Req.searchString" #SearchProductNamecontrol
-                            #GSTNocontrol [autocomplete]="false" (blur)="getSearchByString()">
+                            #GSTNocontrol [autocomplete]="false" (change)="getSearchByString()">
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
